--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mykeyboard">
+<!--    <uses-permission android:name="android.permission.VIBRATE"/>-->
 
     <application
         android:allowBackup="true"
